// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup disables submit button when submitting form 1`] = `
<div
  id="register-form-div"
>
  <h4
    className="text-center"
  >
    Register for a New Account
  </h4>
  <hr />
  <p
    className="text-muted mx-auto text-center"
  >
    Fields marked
    <span
      className="text-danger"
    >
      *
    </span>
     are important
  </p>
  <Form
    className="mt-4 mb-3 px-5"
    id="register-form"
    onSubmit={[Function]}
    tag="form"
  >
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="firstname"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        First Name
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="firstname"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="firstname"
        placeholder="Jane"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="lastname"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Last Name
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="lastname"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="lastname"
        placeholder="Smith"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="email"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Email Address
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="email"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="email"
        placeholder="janesmith@me.com"
        type="email"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="username"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Username
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="username"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="username"
        placeholder="janesmith"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="password"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
       
      <small
        className="text-muted"
      >
        (more than 10 characters)
      </small>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="password"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="password"
        placeholder="••••••••••"
        type="password"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="passwordconfirm"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password Confirmation
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="passwordconfirm"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="passwordConfirm"
        placeholder={null}
        type="password"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        htmlFor="user-info"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Tell Us Something About Yourself
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="user-info"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="aboutMe"
        placeholder="I love to cook"
        type="textarea"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        htmlFor="occupation"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Occupation
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="occupation"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="occupation"
        placeholder="Chef"
        type="text"
        value=""
      />
    </FormGroup>
    <Button
      className="btn-block mt-0"
      color="secondary"
      disabled={true}
      tag="button"
    >
      REGISTER
    </Button>
  </Form>
  <p
    className="text-center"
  >
    Already have an account, 
    <Link
      replace={false}
      target="_self"
      to="\\\\login"
    >
      Log in here
    </Link>
    .
  </p>
</div>
`;

exports[`Signup redirects when authenticated 1`] = `
<div
  id="register-form-div"
>
  <h4
    className="text-center"
  >
    Register for a New Account
  </h4>
  <hr />
  <p
    className="text-muted mx-auto text-center"
  >
    Fields marked
    <span
      className="text-danger"
    >
      *
    </span>
     are important
  </p>
  <Form
    className="mt-4 mb-3 px-5"
    id="register-form"
    onSubmit={[Function]}
    tag="form"
  >
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="firstname"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        First Name
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="firstname"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="firstname"
        placeholder="Jane"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="lastname"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Last Name
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="lastname"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="lastname"
        placeholder="Smith"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="email"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Email Address
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="email"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="email"
        placeholder="janesmith@me.com"
        type="email"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="username"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Username
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="username"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="username"
        placeholder="janesmith"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="password"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
       
      <small
        className="text-muted"
      >
        (more than 10 characters)
      </small>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="password"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="password"
        placeholder="••••••••••"
        type="password"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="passwordconfirm"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password Confirmation
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="passwordconfirm"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="passwordConfirm"
        placeholder={null}
        type="password"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        htmlFor="user-info"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Tell Us Something About Yourself
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="user-info"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="aboutMe"
        placeholder="I love to cook"
        type="textarea"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        htmlFor="occupation"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Occupation
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="occupation"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="occupation"
        placeholder="Chef"
        type="text"
        value=""
      />
    </FormGroup>
    <Button
      className="btn-block mt-0"
      color="secondary"
      disabled={true}
      tag="button"
    >
      REGISTER
    </Button>
  </Form>
  <p
    className="text-center"
  >
    Already have an account, 
    <Link
      replace={false}
      target="_self"
      to="\\\\login"
    >
      Log in here
    </Link>
    .
  </p>
</div>
`;

exports[`Signup renders correctly 1`] = `
<div
  id="register-form-div"
>
  <h4
    className="text-center"
  >
    Register for a New Account
  </h4>
  <hr />
  <p
    className="text-muted mx-auto text-center"
  >
    Fields marked
    <span
      className="text-danger"
    >
      *
    </span>
     are important
  </p>
  <Form
    className="mt-4 mb-3 px-5"
    id="register-form"
    onSubmit={[Function]}
    tag="form"
  >
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="firstname"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        First Name
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="firstname"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="firstname"
        placeholder="Jane"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="lastname"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Last Name
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="lastname"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="lastname"
        placeholder="Smith"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="email"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Email Address
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="email"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="email"
        placeholder="janesmith@me.com"
        type="email"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="username"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Username
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="username"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="username"
        placeholder="janesmith"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="password"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
       
      <small
        className="text-muted"
      >
        (more than 10 characters)
      </small>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="password"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="password"
        placeholder="••••••••••"
        type="password"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="passwordconfirm"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password Confirmation
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="passwordconfirm"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="passwordConfirm"
        placeholder={null}
        type="password"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        htmlFor="user-info"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Tell Us Something About Yourself
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="user-info"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="aboutMe"
        placeholder="I love to cook"
        type="textarea"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        htmlFor="occupation"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Occupation
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="occupation"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="occupation"
        placeholder="Chef"
        type="text"
        value=""
      />
    </FormGroup>
    <Button
      className="btn-block mt-0"
      color="secondary"
      disabled={true}
      tag="button"
    >
      REGISTER
    </Button>
  </Form>
  <p
    className="text-center"
  >
    Already have an account, 
    <Link
      replace={false}
      target="_self"
      to="\\\\login"
    >
      Log in here
    </Link>
    .
  </p>
</div>
`;

exports[`Signup shows error alert and disables submit button when there's a submit error 1`] = `
<div
  id="register-form-div"
>
  <h4
    className="text-center"
  >
    Register for a New Account
  </h4>
  <hr />
  <p
    className="text-muted mx-auto text-center"
  >
    Fields marked
    <span
      className="text-danger"
    >
      *
    </span>
     are important
  </p>
  <Form
    className="mt-4 mb-3 px-5"
    id="register-form"
    onSubmit={[Function]}
    tag="form"
  >
    <NormalAlert
      color="danger"
    >
      <p
        className="text-center mb-0"
      >
        Username/Password do not match
      </p>
    </NormalAlert>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="firstname"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        First Name
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="firstname"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="firstname"
        placeholder="Jane"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="lastname"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Last Name
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="lastname"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="lastname"
        placeholder="Smith"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="email"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Email Address
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="email"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="email"
        placeholder="janesmith@me.com"
        type="email"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="username"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Username
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="username"
        meta={
          Object {
            "asyncValidating": false,
            "error": null,
            "touched": false,
          }
        }
        name="username"
        placeholder="janesmith"
        type="text"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="password"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
       
      <small
        className="text-muted"
      >
        (more than 10 characters)
      </small>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="password"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="password"
        placeholder="••••••••••"
        type="password"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        for="passwordconfirm"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Password Confirmation
        <span
          className="text-danger"
        >
          *
        </span>
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="passwordconfirm"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="passwordConfirm"
        placeholder={null}
        type="password"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        htmlFor="user-info"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Tell Us Something About Yourself
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="user-info"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="aboutMe"
        placeholder="I love to cook"
        type="textarea"
        value=""
      />
    </FormGroup>
    <FormGroup
      tag="div"
    >
      <Label
        className="col-form-label col-form-label-lg"
        htmlFor="occupation"
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        Occupation
      </Label>
      <RenderInput
        handleBlur={[Function]}
        handleChange={[Function]}
        handleFocus={[Function]}
        id="occupation"
        meta={
          Object {
            "error": null,
            "touched": false,
          }
        }
        name="occupation"
        placeholder="Chef"
        type="text"
        value=""
      />
    </FormGroup>
    <Button
      className="btn-block mt-0"
      color="secondary"
      disabled={true}
      tag="button"
    >
      REGISTER
    </Button>
  </Form>
  <p
    className="text-center"
  >
    Already have an account, 
    <Link
      replace={false}
      target="_self"
      to="\\\\login"
    >
      Log in here
    </Link>
    .
  </p>
</div>
`;

exports[`Signup test for right input calls handleChange and handleBlur on input change and blur 1`] = `
<SignupForm
  authenticating={false}
  dispatch={[Function]}
  submitError={null}
>
  <div
    id="register-form-div"
  >
    <h4
      className="text-center"
    >
      Register for a New Account
    </h4>
    <hr />
    <p
      className="text-muted mx-auto text-center"
    >
      Fields marked
      <span
        className="text-danger"
      >
        *
      </span>
       are important
    </p>
    <Form
      className="mt-4 mb-3 px-5"
      id="register-form"
      onSubmit={[Function]}
      tag="form"
    >
      <form
        className="mt-4 mb-3 px-5"
        id="register-form"
        onSubmit={[Function]}
      >
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <Label
              className="col-form-label col-form-label-lg"
              for="firstname"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <label
                className="col-form-label col-form-label-lg  form-control-label"
                htmlFor="firstname"
              >
                First Name
                <span
                  className="text-danger"
                >
                  *
                </span>
              </label>
            </Label>
            <RenderInput
              handleBlur={[Function]}
              handleChange={[Function]}
              handleFocus={[Function]}
              id="firstname"
              meta={
                Object {
                  "error": null,
                  "touched": false,
                }
              }
              name="firstname"
              placeholder="Jane"
              type="text"
              value=""
            >
              <Input
                className=""
                name="firstname"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Jane"
                tag="p"
                type="text"
                value=""
              >
                <input
                  className="form-control"
                  name="firstname"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Jane"
                  type="text"
                  value=""
                />
              </Input>
            </RenderInput>
          </div>
        </FormGroup>
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <Label
              className="col-form-label col-form-label-lg"
              for="lastname"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <label
                className="col-form-label col-form-label-lg  form-control-label"
                htmlFor="lastname"
              >
                Last Name
              </label>
            </Label>
            <RenderInput
              handleBlur={[Function]}
              handleChange={[Function]}
              handleFocus={[Function]}
              id="lastname"
              meta={
                Object {
                  "error": null,
                  "touched": false,
                }
              }
              name="lastname"
              placeholder="Smith"
              type="text"
              value=""
            >
              <Input
                className=""
                name="lastname"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Smith"
                tag="p"
                type="text"
                value=""
              >
                <input
                  className="form-control"
                  name="lastname"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Smith"
                  type="text"
                  value=""
                />
              </Input>
            </RenderInput>
          </div>
        </FormGroup>
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <Label
              className="col-form-label col-form-label-lg"
              for="email"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <label
                className="col-form-label col-form-label-lg  form-control-label"
                htmlFor="email"
              >
                Email Address
                <span
                  className="text-danger"
                >
                  *
                </span>
              </label>
            </Label>
            <RenderInput
              handleBlur={[Function]}
              handleChange={[Function]}
              handleFocus={[Function]}
              id="email"
              meta={
                Object {
                  "asyncValidating": false,
                  "error": null,
                  "touched": false,
                }
              }
              name="email"
              placeholder="janesmith@me.com"
              type="email"
              value=""
            >
              <Input
                className=""
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="janesmith@me.com"
                tag="p"
                type="email"
                value=""
              >
                <input
                  className="form-control"
                  name="email"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="janesmith@me.com"
                  type="email"
                  value=""
                />
              </Input>
            </RenderInput>
          </div>
        </FormGroup>
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <Label
              className="col-form-label col-form-label-lg"
              for="username"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <label
                className="col-form-label col-form-label-lg  form-control-label"
                htmlFor="username"
              >
                Username
                <span
                  className="text-danger"
                >
                  *
                </span>
              </label>
            </Label>
            <RenderInput
              handleBlur={[Function]}
              handleChange={[Function]}
              handleFocus={[Function]}
              id="username"
              meta={
                Object {
                  "asyncValidating": false,
                  "error": null,
                  "touched": false,
                }
              }
              name="username"
              placeholder="janesmith"
              type="text"
              value=""
            >
              <Input
                className=""
                name="username"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="janesmith"
                tag="p"
                type="text"
                value=""
              >
                <input
                  className="form-control"
                  name="username"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="janesmith"
                  type="text"
                  value=""
                />
              </Input>
            </RenderInput>
          </div>
        </FormGroup>
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <Label
              className="col-form-label col-form-label-lg"
              for="password"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <label
                className="col-form-label col-form-label-lg  form-control-label"
                htmlFor="password"
              >
                Password
                <span
                  className="text-danger"
                >
                  *
                </span>
              </label>
            </Label>
             
            <small
              className="text-muted"
            >
              (more than 10 characters)
            </small>
            <RenderInput
              handleBlur={[Function]}
              handleChange={[Function]}
              handleFocus={[Function]}
              id="password"
              meta={
                Object {
                  "error": null,
                  "touched": false,
                }
              }
              name="password"
              placeholder="••••••••••"
              type="password"
              value=""
            >
              <Input
                className=""
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="••••••••••"
                tag="p"
                type="password"
                value=""
              >
                <input
                  className="form-control"
                  name="password"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="••••••••••"
                  type="password"
                  value=""
                />
              </Input>
            </RenderInput>
          </div>
        </FormGroup>
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <Label
              className="col-form-label col-form-label-lg"
              for="passwordconfirm"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <label
                className="col-form-label col-form-label-lg  form-control-label"
                htmlFor="passwordconfirm"
              >
                Password Confirmation
                <span
                  className="text-danger"
                >
                  *
                </span>
              </label>
            </Label>
            <RenderInput
              handleBlur={[Function]}
              handleChange={[Function]}
              handleFocus={[Function]}
              id="passwordconfirm"
              meta={
                Object {
                  "error": null,
                  "touched": false,
                }
              }
              name="passwordConfirm"
              placeholder={null}
              type="password"
              value=""
            >
              <Input
                className=""
                name="passwordConfirm"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder={null}
                tag="p"
                type="password"
                value=""
              >
                <input
                  className="form-control"
                  name="passwordConfirm"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder={null}
                  type="password"
                  value=""
                />
              </Input>
            </RenderInput>
          </div>
        </FormGroup>
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <Label
              className="col-form-label col-form-label-lg"
              htmlFor="user-info"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <label
                className="col-form-label col-form-label-lg  form-control-label"
                htmlFor="user-info"
              >
                Tell Us Something About Yourself
              </label>
            </Label>
            <RenderInput
              handleBlur={[Function]}
              handleChange={[Function]}
              handleFocus={[Function]}
              id="user-info"
              meta={
                Object {
                  "error": null,
                  "touched": false,
                }
              }
              name="aboutMe"
              placeholder="I love to cook"
              type="textarea"
              value=""
            >
              <Input
                className=""
                name="aboutMe"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="I love to cook"
                tag="p"
                type="textarea"
                value=""
              >
                <textarea
                  className="form-control"
                  name="aboutMe"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="I love to cook"
                  value=""
                />
              </Input>
            </RenderInput>
          </div>
        </FormGroup>
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <Label
              className="col-form-label col-form-label-lg"
              htmlFor="occupation"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <label
                className="col-form-label col-form-label-lg  form-control-label"
                htmlFor="occupation"
              >
                Occupation
              </label>
            </Label>
            <RenderInput
              handleBlur={[Function]}
              handleChange={[Function]}
              handleFocus={[Function]}
              id="occupation"
              meta={
                Object {
                  "error": null,
                  "touched": false,
                }
              }
              name="occupation"
              placeholder="Chef"
              type="text"
              value=""
            >
              <Input
                className=""
                name="occupation"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Chef"
                tag="p"
                type="text"
                value=""
              >
                <input
                  className="form-control"
                  name="occupation"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Chef"
                  type="text"
                  value=""
                />
              </Input>
            </RenderInput>
          </div>
        </FormGroup>
        <Button
          className="btn-block mt-0"
          color="secondary"
          disabled={true}
          tag="button"
        >
          <button
            className="btn-block mt-0 btn btn-secondary disabled"
            disabled={true}
            onClick={[Function]}
          >
            REGISTER
          </button>
        </Button>
      </form>
    </Form>
    <p
      className="text-center"
    >
      Already have an account, 
      <Link
        replace={false}
        target="_self"
        to="\\\\login"
      >
        <a
          href="\\\\login"
          onClick={[Function]}
          target="_self"
        >
          Log in here
        </a>
      </Link>
      .
    </p>
  </div>
</SignupForm>
`;
